--- a/package.json
+++ b/package.json
@@ -68,13 +68,9 @@
     "workbox-webpack-plugin": "^5.1.4"
   },
   "dependencies": {
-    "lazysizes": "^5.1.0",
-    "lodash-es": "^4.17.11",
-    "lozad": "^1.9.0",
     "preact": "^10.5.7",
     "preact-async-route": "^2.2.1",
     "preact-helmet": "^4.0.0-alpha-3",
-    "preact-router": "^3.2.1",
-    "timeago.js": "^4.0.0-beta.2"
+    "preact-router": "^3.2.1"
   }
 }
