--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "preact": "^10.5.7",
     "preact-async-route": "^2.2.1",
     "preact-helmet": "^4.0.0-alpha-3",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "preact-transition-group": "^2.0.0",
+    "redux-zero": "^5.1.7"
   }
 }
