Camel Case Not allowed as name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack4Preact",
+  "name": "webpack4preact",
   "version": "1.0.0",
   "description": "Webpack Starter kit for PWA Preact projects",
   "": "James Quinn",
